# job-radar

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODOS.md  pyproject.toml
data/profiles/: profile.yaml
data/samples/: sample_jobs.json
diss/contributor-guide/: agents-guide-analysis.md
scripts/: boss_login.py  fetch_jobs.py
src/ai/: chains.py  profile_builder.py  prompts.py  resume_parser.py  schemas.py
src/analysis/: market.py  matcher.py  recommender.py
src/auth/: __init__.py  playwright_login.py
src/cli/: main.py
src/config/: skill_aliases.yaml
src/core/: education_parser.py  experience_parser.py  normalizer.py  salary_parser.py  scorer.py
src/data/: loader.py  models.py  profile.py
src/report/: html_report.py
tests/: conftest.py
tests/ai/: test_chains.py  test_profile_builder.py  test_resume_parser.py  test_schemas.py
tests/auth/: test_playwright_login.py
tests/core/: test_education_parser.py  test_experience_parser.py  test_normalizer.py  test_salary_parser.py  test_scorer.py
tests/data/: test_loader.py  test_profile.py
