[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-radar"
version = "0.1.0"
description = "求职决策 CLI — 岗位雷达，不是搜索工具，是决策工具"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "zhipuai>=2.0",
    "pymupdf4llm>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
boss-analyze = "src.cli.main:analyze"
boss-match = "src.cli.main:match"
boss-market = "src.cli.main:market"
boss-advisor = "src.cli.main:advisor"
boss-init = "src.cli.main:init"
boss-login = "src.cli.main:login"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
